service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellomk-service
spec:
  selector:
    app: hellominikube
  ports:
  - name: app
    protocol: TCP
    port: 80
    targetPort: app
