ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellomk-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
spec:
 rules:
 - http:
     paths:
     - path: /hellominikube/
       backend:
         serviceName: hellomk-service
         servicePort: app
